unit_tests/preprocessor/errors/undef-file.correct
preprocessor/errors/undef-file:1: warning: undefining "__FILE__"
